clang-ir/tests/snapshots/snapshot_fixtures__fixtures__break_while.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/break_while.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn countdown(%arg0: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %16 = alloca s32i, "n", align 4
        %17 = alloca s32i, "__retval", align 4
        %18 = alloca s32i, "steps", align 4
        store %arg0, %16
        %19 = const 0 : s32i
        store %19, %18, align 4
        scope {
                while {
                        %30 = const 1 : s32i
                        %31 = cast(int_to_bool) %30 : bool
                        condition %31
                } do {
                        scope {
                                scope {
                                        %27 = load %16 : s32i, align 4
                                        %28 = const 0 : s32i
                                        cmp
                                        if %29 {
                                                break
                                        }
                                        yield
                                }
                                %22 = const 2 : s32i
                                %23 = load %16 : s32i, align 4
                                div
                                store %24, %16, align 4
                                %25 = load %18 : s32i, align 4
                                inc
                                store %26, %18, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %20 = load %18 : s32i, align 4
        store %20, %17
        %21 = load %17 : s32i
        return %21
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = get_global @printf : (s8i*, ...) -> s32i*
        %3 = get_global @.str : s8i[4]*
        %4 = cast(array_to_ptrdecay) %3 : s8i*
        %5 = const 100 : s32i
        %6 = call @countdown(%5) : s32i [all]
        %7 = call @printf(%4, %6) : s32i [all]
        %8 = get_global @printf : (s8i*, ...) -> s32i*
        %9 = get_global @.str : s8i[4]*
        %10 = cast(array_to_ptrdecay) %9 : s8i*
        %11 = const 0 : s32i
        %12 = call @countdown(%11) : s32i [all]
        %13 = call @printf(%10, %12) : s32i [all]
        %14 = const 0 : s32i
        store %14, %0
        %15 = load %0 : s32i
        return %15
}
